--- a/index.html
+++ b/index.html
@@ -1,13 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>2 Steps Ahead</title>
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <div class="container">
+                <div class="navbar__container">
+                    <a href="index.html" id="navbar__logo">
+                        <img src="/assets/images/web logo.png" alt="2 Steps Ahead Logo">
+                    </a>
+                    <div class="navbar__toggle" id="mobile-menu">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </div>
+                    <ul class="navbar__menu">
+                        <li class="navbar__item">
+                            <a href="index.html" class="navbar__links" id="home-page">Dashboard</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="wallet.html" class="navbar__links" id="wallet-page">Wallet</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="blogs.html" class="navbar__links" id="blogs-page">About</a>
+                        </li>
+                    </ul>
+                    <div class="navbar__extras">
+                        <a href="login.html" class="button" id="login">Login</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    
+    <script>
+        const mobileMenu = document.getElementById('mobile-menu');
+        const navMenu = document.querySelector('.navbar__menu');
 
+        mobileMenu.addEventListener('click', function() {
+            mobileMenu.classList.toggle('is-active');
+            navMenu.classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
