--- a/StudentProfile/studenprofile.html
+++ b/StudentProfile/studenprofile.html
@@ -23,13 +23,13 @@
                     <ul class="navbar__menu">
                         <li class="navbar__item">
                             
-                            <a href="index.html" class="navbar__links" id="home-page">
-                                <img src="/assets/images/dashboard -logo.png" alt="">
+                            <a href="/student/dashboard.html" class="navbar__links" id="home-page">
+                                <img src="\assets\images\dashboard -logo.png" alt="">
                                 Dashboard</a>
                         </li>
                         <li class="navbar__item">
                             
-                            <a href="wallet.html" class="navbar__links" id="wallet-page">
+                            <a href="/student/mentorlist.html" class="navbar__links" id="wallet-page">
                                 <img src="/assets//images/mentors-list.png" alt="">Mentor List</a>
                         </li>
                         <li class="navbar__item">
@@ -38,6 +38,11 @@
                                 <img src="assets/images/internship-logo.png" alt="">Internships</a>
                         </li>
                     </ul>
+                    <a href="/startingpages/studentMentor/studentMentor.html">
+                    <button style="padding: 10px;border-radius: 8px;width: 6vw;height: 5vh;background-color: red;color: white;border-width: 0px;cursor: pointer;">
+                        Logout
+                    </button>
+                </a>
                     <div class="navbar__extras">
                         <div class="nav-icons">
                             <div class="notification">
