--- a/mentor/about.html
+++ b/mentor/about.html
@@ -698,14 +698,10 @@
               <header class="header-container">
                 <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/0862ce9cf035a1287413e20a329a2c1ca36177e3b0561f5dfed704bda3cb7077?placeholderIfAbsent=true&apiKey=57592b8a463a475db413a7b20489d30f" alt="Logo" class="logo" />
                 <nav class="nav-container">
-                  <div class="nav-item">
-                    <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/9078dd35646bc44aca5bc63ea8e82a4d4767d9e08b7c86d72209f5bbc83e3334?placeholderIfAbsent=true&apiKey=57592b8a463a475db413a7b20489d30f" alt="Dashboard icon" class="nav-icon" />
-                    <span class="nav-text">Dashboard</span>
-                  </div>
-                  <div class="nav-item">
-                    <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/f978806d3cb67929148aba29f4207944de5f380f9fefe48cfef0fd2b7810845a?placeholderIfAbsent=true&apiKey=57592b8a463a475db413a7b20489d30f" alt="Wallet icon" class="nav-icon" />
-                    <span class="nav-text">Wallet</span>
-                  </div>
+                  <a class="nav-item" href="/mentor/dashboard.html">
+                    <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/9078dd35646bc44aca5bc63ea8e82a4d4767d9e08b7c86d72209f5bbc83e3334?placeholderIfAbsent=true&apiKey=57592b8a463a475db413a7b20489d30f" alt="Dashboard icon" class="nav-icon" /> 
+                  </a>
+                  
                   <div class="nav-item">
                     <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/543802dd9640e49899d9e8fd5ce52477d20d1c56d65947d3274f7a6f674fb269?placeholderIfAbsent=true&apiKey=57592b8a463a475db413a7b20489d30f" alt="Blogs icon" class="nav-icon" />
                     <span class="nav-text">Blogs</span>
