--- a/mentor/dashboard.html
+++ b/mentor/dashboard.html
@@ -22,13 +22,13 @@
                     </div>
                     <ul class="navbar__menu">
                         <li class="navbar__item">
-                            <a href="index" class="navbar__links" id="home-page">Dashboard</a>
+                            <a href="/mentor/dashboard.html" class="navbar__links" id="home-page">Dashboard</a>
                         </li>
                         <li class="navbar__item">
-                            <a href="wallet" class="navbar__links" id="wallet-page">Wallet</a>
+                            <a href="/mentor/about.html" class="navbar__links" id="blogs-page">About</a>
                         </li>
-                        <li class="navbar__item">
-                            <a href="blogs" class="navbar__links" id="blogs-page">About</a>
+                        <li class="navbar__item" >
+                            <a href="/startingpages/studentMentor/studentMentor.html"  style="color: red;" class="navbar__links" id="blogs-page">Logout</a>
                         </li>
                     </ul>
                     <div class="navbar__extras">
@@ -37,7 +37,7 @@
                                 <img src="/assets/images/notification.png" alt="Notification" height="32" width="32">
                             </a>
                         </div>
-                        <a href="profile" class="button icon" id="login">
+                        <a href="/mentor/about.html" class="button icon" id="login">
                             <img src="/assets/images/person3.svg" alt="User" class="avatar">
                         </a>
                     </div>
