--- a/startingpages/studentMentor/studentMentor.html
+++ b/startingpages/studentMentor/studentMentor.html
@@ -14,9 +14,9 @@
        
         <div class="role-selection">
             <h2>Who are you?</h2>
-            <div class="buttons">
-                <button class="role-button">Student</button>
-                <button class="role-button">Mentor</button>
+            <div class="buttons" id="studentMentor">
+                <button class="role-button" id="student-btn">Student</button>
+                <button class="role-button" id="mentor-btn">Mentor</button>
             </div>
         </div>
         
