--- a/student/dashboard.html
+++ b/student/dashboard.html
@@ -209,12 +209,12 @@
         <a href="#" class="logo">2A</a>
         <nav>
             <ul>
-                <li><a href="#"><img src="dashboard-icon.svg" alt="Dashboard" width="20" height="20">Dashboard</a></li>
-                <li><a href="#"><img src="mentor-list-icon.svg" alt="Mentor list" width="20" height="20">Mentor list</a></li>
-                <li><a href="#"><img src="students-icon.svg" alt="Students" width="20" height="20">Students</a></li>
-                <li><a href="#"><img src="internship-icon.svg" alt="Internship" width="20" height="20">Internship</a></li>
-                <li><a href="#"><img src="wallet-icon.svg" alt="Wallet" width="20" height="20">Wallet</a></li>
-                <li><a href="#"><img src="blogs-icon.svg" alt="Blogs" width="20" height="20">Blogs</a></li>
+                <li><a href="#"><img src="\assets\images\dashboard -logo.png" alt="Dashboard" width="20" height="20">Dashboard</a></li>
+                <li><a href="#"><img src="\assets\images\mentors-list.png" alt="Mentor list" width="20" height="20">Mentor list</a></li>
+                <li><a href="#"><img src="\assets\images\students-logo.png" alt="Students" width="20" height="20">Students</a></li>
+                <li><a href="#"><img src="\assets\images\internship-logo.png" alt="Internship" width="20" height="20">Internship</a></li>
+                <li><a href="#"><img src="\assets\images\wallet-icon.svg" alt="Wallet" width="20" height="20">Wallet</a></li>
+                <li><a href="#"><img src="\assets\images\blogs.png" alt="Blogs" width="20" height="20">Blogs</a></li>
             </ul>
         </nav>
         <div class="user-actions">
