--- a/student/dashboard.html
+++ b/student/dashboard.html
@@ -166,7 +166,9 @@
                         </div>
                     </div>
                 </div>
-                <button class="add__session">Add session</button>
+                <a href="/student/videosessions.html"> 
+                <button class="add__session">Join Meet</button>
+                </a>
             </div>
             <div class="domains__container">
                 <h2 class="domains__header">
