--- a/mentor/dashboard.html
+++ b/mentor/dashboard.html
@@ -29,8 +29,8 @@
                         </li>
                         <li class="navbar__item">
                             
-                            <a href="/student/mentorlist.html" class="navbar__links" id="wallet-page">
-                                <img src="/assets//images/mentors-list.png" alt="">Mentor List</a>
+                            <a href="/mentor/about.html" class="navbar__links" id="wallet-page">
+                                <img src="/assets//images/mentors-list.png" alt="">About</a>
                         </li>
                         <li class="navbar__item">
                             
@@ -120,7 +120,9 @@
                         </div>
                     </div>
                 </div>
-                <button class="add__session">Add session</button>
+                <a href="/mentor/videocall.html">
+                <button class="add__session">Join Meet</button>
+            </a>
             </div>
             <div class="domains__container">
                 <h2 class="domains__header">
