--- a/startingpages/signin/signin.html
+++ b/startingpages/signin/signin.html
@@ -31,7 +31,7 @@
                 <img src="../../assets/images/github.png" alt="GitHub">
                 <img src="../../assets/images/linkedin.png" alt="LinkedIn">
             </div>
-            <h3>Already have an account? <a href="#">Login</a></h3>
+            <h3>Already have an account? <a href="/startingpages/login/login.html">Login</a></h3>
         </div>
         
         
