--- a/student/videosessions.html
+++ b/student/videosessions.html
@@ -171,8 +171,8 @@
         <a href="#" class="logo">2A</a>
         <nav>
             <ul>
-                <li><a href="#"><img src="dashboard-icon.svg" alt="Dashboard" width="20" height="20">Dashboard</a></li>
-                <li><a href="#"><img src="wallet-icon.svg" alt="Wallet" width="20" height="20">Wallet</a></li>
+                <li><a href="/student/dashboard.html"><img src="dashboard-icon.svg" alt="Dashboard" width="20" height="20">Dashboard</a></li>
+               
                 <li><a href="#"><img src="blogs-icon.svg" alt="Blogs" width="20" height="20">Blogs</a></li>
             </ul>
         </nav>
@@ -196,7 +196,9 @@
             <button class="mute"><img src="mute-icon.svg" alt="Mute"></button>
             <button class="video"><img src="video-icon.svg" alt="Video"></button>
             <button class="share-screen"><img src="share-screen-icon.svg" alt="Share Screen"></button>
+            <a href="/student/dashboard.html">
             <button class="end-call"><img src="end-call-icon.svg" alt="End Call"></button>
+        </a>
         </div>
     </main>
     <script>
