--- a/student/dashboard.html
+++ b/student/dashboard.html
@@ -81,7 +81,7 @@
                         <li class="navbar__item">
                             
                             <a href="blogs.html" class="navbar__links" id="blogs-page">
-                                <img src="assets/images/internship-logo.png" alt="">Internships</a>
+                                <img src="../assets/images/internship.png" alt="">Internships</a>
                         </li>
                     </ul>
                     <a href="/startingpages/studentMentor/studentMentor.html">
@@ -99,9 +99,11 @@
                                 <span>27</span>
                                 <img src="../assets/images/streak (1).png" alt="Points">
                             </div>
+                            <a href="../StudentProfile/studenprofile.html">
                             <div class="profile">
                                 <img src="../assets/images/solo-session.png" alt="Profile Picture">
                             </div>
+                        </a>
                         </div>
                     </div>
                 </div>
