responsive and added images

--- a/student/videosessions.html
+++ b/student/videosessions.html
@@ -30,6 +30,7 @@
             justify-content: center;
         }
         .main-video, .mentor-video {
+            color: white;
             position: relative;
             padding: 10px;
         }
@@ -205,10 +206,12 @@
             </div>
         </div>
         <div class="video-controls">
-            <button class="mute"><img src="mute-icon.svg" alt="Mute"></button>
-            <button class="video"><img src="video-icon.svg" alt="Video"></button>
-            <button class="share-screen"><img src="share-screen-icon.svg" alt="Share Screen"></button>
-            <button class="end-call"><img src="end-call-icon.svg" alt="End Call"></button>
+            <button class="mute"><img src="../assets/images/mic.png" alt="Mute"></button>
+            <button class="video"><img src="../assets/images/cam.png" alt="Video"></button>
+            <button class="share-screen"><img src="../assets/images/present.png" alt="Share Screen"></button>
+            <a href="./dashboard.html">
+            <button style="background-color: red;" class="end-call"><img src="../assets/images/end-meet.png" alt="End Call"></button>
+        </a>
         </div>
     </main>
     <script>
