--- a/mentor/dashboard.html
+++ b/mentor/dashboard.html
@@ -29,7 +29,7 @@
                         </li>
                         <li class="navbar__item">
                             
-                            <a href="blogs.html" class="navbar__links" id="blogs-page">
+                            <a href="/mentor/internships.html" class="navbar__links" id="blogs-page">
                                 <img src="../assets/images/internship.png" alt="">Internships</a>
                         </li>
                      
