--- a/student/internships.html
+++ b/student/internships.html
@@ -277,7 +277,7 @@
                             <h2>UI/UX Designer</h2>
                             <p>Google</p>
                         </div>
-                        <div class="company-logo"></div>
+                        <div class="company-logo"> <img class="company-logo" src="../assets/images/Google-logo.png" alt=""></div>
                     </div>
                     <div class="card-details">
                         <span class="detail-item"><span class="detail-icon"></span>Work from home</span>
@@ -297,7 +297,7 @@
                             <h2>Full Stack Development</h2>
                             <p>Microsoft</p>
                         </div>
-                        <div class="company-logo"></div>
+                        <div class="company-logo"><img class="company-logo" src="../assets/images/microsoft-icon.png" alt=""></div>
                     </div>
                     <div class="card-details">
                         <span class="detail-item"><span class="detail-icon"></span>Hyderabad</span>
@@ -317,7 +317,7 @@
                             <h2>Full Stack Development</h2>
                             <p>Adobe</p>
                         </div>
-                        <div class="company-logo"></div>
+                        <div class="company-logo"><img class="company-logo" src="../assets/images/adobe-logo.png" alt=""></div>
                     </div>
                     <div class="card-details">
                         <span class="detail-item"><span class="detail-icon"></span>Work from home</span>
